# libbmp

./: README.md
src/: CMakeLists.txt  test.c
